the calculator can solve simple math but perform multiple operation at a time

--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
   </head>
   <body>
     <div id="cal-container">
+        <div id="displayContent"></div>
+      
       <button class="btn" id="zero">0</button>
       <button class="btn" id="one">1</button>
       <button class="btn" id="two">2</button>
@@ -19,11 +21,13 @@
       <button class="btn" id="seven">7</button>
       <button class="btn" id="eight">8</button>
       <button class="btn" id="nine">9</button>
-      <button class="btn" id="addition">+</button>
-      <button class="btn" id="subtraction">-</button>
-      <button class="btn" id="multiply">*</button>
-      <button class="btn" id="divide">/</button>
+      <button class="operators-Btn" id="addition">+</button>
+      <button class="operators-Btn" id="subtraction">-</button>
+      <button class="operators-Btn" id="multiplication">*</button>
+      <button class="operators-Btn" id="division">/</button>
       <button class="btn" id="equal">=</button>
+      <button class="btn" id="clear">Clear</button>
+
     </div>
   </body>
 </html>
